# ecos

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  project-m2-progress.md  pyproject.toml
data/: python_basics_q_matrix.json  q_matrix.json
discussions/: 2026-06-24-ecos-applications-doc.md  2026-06-24-ecos-c-dim-content-libraries.md  2026-06-24-ecos-cta-math-foundations.md  2026-06-24-ecos-lca-instructional-foundations.md  2026-06-24-ecos-migration-overview.md  2026-06-24-ecos-project-establishment.md  2026-06-24-ecos-theoretical-roadmap.md  2026-06-25-ecos-architecture-doc.md  2026-06-25-ecos-bloom-application-doc.md  2026-06-25-ecos-bloom-library-doc.md  2026-06-25-ecos-cta-engine-doc.md  2026-06-25-ecos-dual-agent-doc.md  2026-06-25-ecos-k12-cog-structure-doc.md  2026-06-25-ecos-lca-engine-doc.md  2026-06-25-ecos-learning-strategies-doc.md  2026-06-25-ecos-mvp-design-doc.md  2026-06-25-ecos-persistence-doc.md  2026-06-25-ecos-risks-doc.md  2026-06-25-ecos-roadmap-doc.md  2026-06-25-ecos-workflow-demo.md  2026-06-25-ecos-zpd-application-doc.md  2026-06-26-ecos-state-architecture-boundaries.md  2026-06-26-ecos-user-friendly-demo.md  2026-06-27-ecos-external-feedback-response.md  2026-06-27-ecos-feasibility-and-history.md  2026-07-03-eca-impact-analysis.md  2026-07-05-claude-skills-definition-4gate-full-report.md  2026-07-05-claude-skills-demo-round1-3.md  2026-07-06-belief-engine-bkt-update-demo.md  2026-07-06-cross-domain-demo-critical-thinking.md  2026-07-06-mirt-kps-differentiation-demo.md  2026-07-06-python-basics-4gate-demo.md  2026-07-06-python-basics-belief-tracking.json  (+10 more)
(+154 files in other folders)
